syntax = "proto3";

option go_package = "./pbobjs";

message UpMsg {
    string msgType = 1;
    bytes msgContent= 2;
    int32 flags = 3;
    string clientUid=4;
    PushData pushData = 5;
}
message PushData{
    string title = 1;
    string pushId = 2;
    string pushText = 3;
    string pushExtraData = 4;
}
message DownMsg{
    string fromId = 1;
    ChannelType type = 2;
    string msgType = 3;
    string groupId = 4;
    string msgId = 5;
    bytes msgContent = 6;
    int64 msgTime = 7;
    int32 flags = 8;
    bool isSend = 9;
    string platform = 10;
    string clientUid = 11;
    PushData pushData = 12;
}
enum ChannelType {
    Private = 0;
    Group = 1;
    Chatroom = 2;
    System = 3;
}
message Notify{
    int32 type = 1;
    int64 syncTime = 2;
}
message SyncMsgReq{
    int64 syncTime = 1;//收件箱同步时间
    bool containsSendBox = 2;//是否包含发件箱消息
    int64 sendBoxSyncTime = 3;//发件箱同步时间
}
message DownMsgSet{
    repeated DownMsg msgs = 1;
    int64 syncTime = 2;
    bool isFinished = 3;
}